tests/fail/dosya-io.kip

("./tests/yazı.tmp"'ye) ("selam\n\tkip"'yi) yaz.

("./tests/yazı.tmp"'den oku) yaz.
